updated bootstrap version

--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -62,7 +62,7 @@
                                             </a>
                                         }
                                     </CardTitle>
-                                    <Image Src="@item.FullSrc"/>
+                                    <Image Class="rounded" Src="@item.FullSrc"/>
                                     <CardBody>
                                         <CardText
                                             Style="margin-left: 20px; margin-top: 10px; margin-bottom: 0">@item.Description</CardText>
