Fixed header font scaling

--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -2,11 +2,10 @@
 
 <PageTitle>Portfolio</PageTitle>
 
-<div id="top" class="outer"
-     style="background-size: contain; background-image: url('images/background.png'); background-repeat: no-repeat; width: 100%; height: 0; padding-top: 66.64%; position: relative;">
+<div id="top" class="outer" style="background-size: contain; background-image: url('images/background.png'); background-repeat: no-repeat; width: 100%; height: 0; padding-top: 66.64%; position: relative;">
     <div style="position: absolute;top:30%; bottom:0; left:0; right:0;">
-        <h1 style="font-size: 90px" class="generic-text">Discover Henry</h1>
-        <h2 class="generic-text">
+        <h1 style="font-size: 5vw" class="generic-text">Discover Henry</h1>
+        <h2 style="font-size: 2vw" class="generic-text">
             Software Engineer / Game Developer
             <a href="https://github.com/cabbagegod">
                 <Icon Name="IconName.Github" Color="IconColor.White"/>
